# hw06-tjchauhan2019

./: .buildinfo  Makefile  README.html  README.md  _config.yml  conf.py  genindex.html  hw06-description.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
.doctrees/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_sources/: README.md  index.ipynb
indexbook/: intro.md
indexbook/_build/.doctrees/: environment.pickle  notebooks.doctree
indexbook/_build/html/: .buildinfo  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
indexbook/_build/html/.doctrees/: environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
indexbook/_build/jupyter_execute/: notebooks.ipynb
ligotools/: readligo.py  utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: test_readligo.py
