# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = 0.2
author           = Ligo Scientific Collaboration (LSC) and Kshitij Chauhan (TJ)
author_email     = tjchauhan2019@berkeley.edu
description      = A Python library to make read ligotools
keywords         = tools, ligotools
classifiers      =
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = ==2.7.18,
install_requires =
    tqdm
    numpy

